<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_baseline_exposure_24"
            android:title="@string/nav_bmi" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_expense"
            android:icon="@drawable/ic_baseline_assessment_24"
            android:title="@string/nav_expense" />
    </group>

</menu>